log
Wed 10 May 2023 11:39:55 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
a6073d5
Wed 10 May 2023 11:40:09 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8be213b
Wed 10 May 2023 11:41:25 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
592e8e0
Wed 10 May 2023 11:42:10 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
24061b5
Wed 10 May 2023 11:42:31 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
b045813
Thu 11 May 2023 12:00:39 AM UTC: 
 heap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:
test.c: In function ‘heap_push’:
heap.c:37:22: error: ‘posicion’ is used uninitialized [-Werror=uninitialized]
   37 |   int padre=(posicion-1)/2;
      |             ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
3c2c15f
Thu 11 May 2023 12:00:49 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
test.c: In function ‘heap_push’:
heap.c:37:22: error: ‘posicion’ is used uninitialized [-Werror=uninitialized]
   37 |   int padre=(posicion-1)/2;
      |             ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
1b84f73
Thu 11 May 2023 12:01:02 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|2
total_score: 30/70
cc9880e
Thu 11 May 2023 12:10:45 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
49e75ab
Thu 11 May 2023 12:11:33 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
63e1016
Thu 11 May 2023 12:11:57 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
fcc468d
Thu 11 May 2023 12:12:06 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
ee4f641
Thu 11 May 2023 12:38:49 AM UTC: 
 heap.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  7|1
total_score: 45/70
dcd40b1
Thu 11 May 2023 01:03:02 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
d20e315
Thu 11 May 2023 01:04:10 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
298ac21
Thu 11 May 2023 01:06:19 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  7|1
total_score: 45/70
025a492
Thu 11 May 2023 01:07:16 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
eb24ff1
Thu 11 May 2023 01:07:24 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_pop’:
heap.c:75:112: error: expected expression before ‘>’ token
   75 |       if((pq->heapArray[hijo1].priority <= pq->heapArray[hijo2].priority) && (pq->heapArray[posicion].priority=>pq->heapArray[hijo2].priority)){
      |                                                                                                                ^
Compilation failed
8b9a339
Thu 11 May 2023 01:07:34 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
88281f1
Thu 11 May 2023 01:11:35 AM UTC: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  8|0
total_score: 70/70
dda7b49
